crates/secretenv-mcp/tests/boundary_ui/secret_is_not_serializable.stderr
error[E0277]: the trait bound `Secret<String>: serde::Serialize` is not satisfied
  --> tests/boundary_ui/secret_is_not_serializable.rs:21:24
   |
21 |     requires_serialize(s);
   |     ------------------ ^ the trait `Serialize` is not implemented for `Secret<String>`
   |     |
   |     required by a bound introduced by this call
   |
   = note: for local types consider adding `#[derive(serde::Serialize)]` to your `Secret<String>` type
   = note: for types from other crates check whether the crate offers a `serde` feature flag
   = help: the following other types implement trait `Serialize`:
             &'a T
             &'a mut T
             ()
             (T,)
             (T0, T1)
             (T0, T1, T2)
             (T0, T1, T2, T3)
             (T0, T1, T2, T3, T4)
           and $N others
note: required by a bound in `requires_serialize`
  --> tests/boundary_ui/secret_is_not_serializable.rs:17:26
   |
17 | fn requires_serialize<T: serde::Serialize>(_: T) {}
   |                          ^^^^^^^^^^^^^^^^ required by this bound in `requires_serialize`
